Fix for bug# 240718 (SDO 2.1.1 TCK - Need to be able to resolve schema location against base location containing jar file)